feat(api): add swagger ui and openapi
