# server/src/validators/vpn.ts
@@ -1,0 +1,18 @@
+import { z } from 'zod';
+import 'zod-to-openapi/dist/zod-extensions';
+
+export const VpnModel = z
+  .object({
+    id: z.string().uuid(),
+    ownerId: z.string().uuid(),
+    name: z.string(),
+  })
+  .openapi({ name: 'Vpn' });
+
+export const VpnCreate = VpnModel.pick({ name: true }).openapi({
+  name: 'VpnCreateRequest',
+});
+
+export const VpnUpdate = VpnCreate.partial().openapi({
+  name: 'VpnUpdateRequest',
+});
